--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ body {
 #title {
     font-size: 6em;
     margin: 50px;
-    color: #BB86FC;
+    color: #3700;
 }
 
 #timer {
@@ -31,7 +31,7 @@ input, button {
 
 #stopButton {
     margin: 10px;
-    margin-top:25px;
+    margin-top:35px;
     padding: 15px;
     font-size: 13px;
 }
