--- a/src/style.css
+++ b/src/style.css
@@ -32,8 +32,10 @@ input, button {
 #stopButton {
     margin: 10px;
     margin-top:35px;
-    padding: 15px;
+    padding: 10px;
     font-size: 13px;
+    background-color: #121212;
+    color: #FFFFFF;
 }
 
 #timer.forward-timer {
