--- a/src/style.css
+++ b/src/style.css
@@ -11,13 +11,13 @@ body {
 }
 
 #title {
-    font-size: 6em;
+    font-size: 4em;
     margin: 50px;
     color: #03DAC6;
 }
 
 #timer {
-    font-size: 5em;
+    font-size: 3.5em;
     margin: 50px;
     color: #CF6679;
 }
@@ -29,15 +29,16 @@ input, button {
     font-size: 18px;
 }
 
-#stopButton {
+#restartButton {
     margin: 10px;
     margin-top:35px;
     padding: 10px;
     font-size: 13px;
     background-color: #121212;
-    color: #FFFFFF;
+    color: #5A5A5A;
 }
 
 #timer.forward-timer {
-    color: #03DAC6; /* Example color */
+    color: #BB86FC;
+    font-size: 2.5em;
 }
